src/objects/Contract_Prepay_Financial_Data__c.object
<CustomObject>
    <description>[Object to support Zuora royalty solution]</description>
    <fields>
        <fullName>Application1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application1</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Contract Prepay Financial Datas</relationshipLabel>
        <relationshipName>Contract_Prepay_Financial_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application2</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Contract Prepay Financial Datas (Application2)</relationshipLabel>
        <relationshipName>Contract_Prepay_Financial_Datas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application3</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Contract Prepay Financial Datas (Application3)</relationshipLabel>
        <relationshipName>Contract_Prepay_Financial_Datas2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Prepay Financial Datas</relationshipLabel>
        <relationshipName>Contract_Prepay_Financial_Datas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_TrueUp_Lines__c</fullName>
        <label>Number of TrueUp Lines</label>
        <summaryForeignKey>Contract_Prepay_TrueUp__c.Contract_Prepay_Financial_Data__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PO_Amount__c</fullName>
        <label>PO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PP_Effective_From__c</fullName>
        <label>PP Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PP_Effective_To__c</fullName>
        <label>PP Effective To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prepay_Amount__c</fullName>
        <label>Prepay Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Contract Prepay Financial Data</label>
    <nameField>
        <displayFormat>Prepay-{0000}</displayFormat>
        <label>Contract Prepay Financial Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Prepay Financial Datas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>